grammar/models.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function(program) { return program; },
      peg$c1 = function(p, body) {
          return expression(Token.Package, p, body)
        },
      peg$c2 = function(head, e) { return e; },
      peg$c3 = function(head, rest) {
          return [head].concat(rest);
        },
      peg$c4 = function(r) { return r; },
      peg$c5 = function(i) { return i; },
      peg$c6 = "package",
      peg$c7 = peg$literalExpectation("package", false),
      peg$c8 = function(p) { return p.join(''); },
      peg$c9 = "import",
      peg$c10 = peg$literalExpectation("import", false),
      peg$c11 = function(n) {
      		return expression(Token.Import, n.join(''))
      	},
      peg$c12 = function(r) { return r },
      peg$c13 = function(recs) { return recs; },
      peg$c14 = function(aa) { return aa;},
      peg$c15 = "record",
      peg$c16 = peg$literalExpectation("record", false),
      peg$c17 = "{",
      peg$c18 = peg$literalExpectation("{", false),
      peg$c19 = "}",
      peg$c20 = peg$literalExpectation("}", false),
      peg$c21 = function(a, name, body) {
      		//return [Token.Record, name, a.concat(body)];
          return expression(Token.Record, name, a, body)
        },
      peg$c22 = function(p) { return p; },
      peg$c23 = function(props) {
          	return props
          },
      peg$c24 = ":",
      peg$c25 = peg$literalExpectation(":", false),
      peg$c26 = function(a, name, type) {
          return expression(Token.Property, name.join(''), a, type)
        },
      peg$c27 = "?",
      peg$c28 = peg$literalExpectation("?", false),
      peg$c29 = function(t) { return expression(Token.OptionalType, t); },
      peg$c30 = function(t) { return t; },
      peg$c31 = function(t) { return expression(Token.PrimitiveType, t) },
      peg$c32 = function(t) { return expression(Token.RecordType, t) },
      peg$c33 = "string",
      peg$c34 = peg$literalExpectation("string", false),
      peg$c35 = function() { return Type.String; },
      peg$c36 = "date",
      peg$c37 = peg$literalExpectation("date", false),
      peg$c38 = function() { return Type.Date; },
      peg$c39 = "bool",
      peg$c40 = peg$literalExpectation("bool", false),
      peg$c41 = function() { return Type.Boolean; },
      peg$c42 = "int",
      peg$c43 = peg$literalExpectation("int", false),
      peg$c44 = function() { return Type.Int; },
      peg$c45 = "uint",
      peg$c46 = peg$literalExpectation("uint", false),
      peg$c47 = function() { return Type.Uint; },
      peg$c48 = "int8",
      peg$c49 = peg$literalExpectation("int8", false),
      peg$c50 = function() { return Type.Int8; },
      peg$c51 = "int16",
      peg$c52 = peg$literalExpectation("int16", false),
      peg$c53 = function() { return Type.Int16; },
      peg$c54 = "int32",
      peg$c55 = peg$literalExpectation("int32", false),
      peg$c56 = function() { return Type.Int32; },
      peg$c57 = "int64",
      peg$c58 = peg$literalExpectation("int64", false),
      peg$c59 = function() { return Type.Int64; },
      peg$c60 = "uint8",
      peg$c61 = peg$literalExpectation("uint8", false),
      peg$c62 = function() { return Type.Uint8; },
      peg$c63 = "uint16",
      peg$c64 = peg$literalExpectation("uint16", false),
      peg$c65 = function() { return Type.Uint16; },
      peg$c66 = "uint32",
      peg$c67 = peg$literalExpectation("uint32", false),
      peg$c68 = function() { return Type.Uint32; },
      peg$c69 = "uint64",
      peg$c70 = peg$literalExpectation("uint64", false),
      peg$c71 = function() { return Type.Uint64; },
      peg$c72 = "double",
      peg$c73 = peg$literalExpectation("double", false),
      peg$c74 = function() { return Type.Double; },
      peg$c75 = "float",
      peg$c76 = peg$literalExpectation("float", false),
      peg$c77 = function() { return Type.Float; },
      peg$c78 = "bytes",
      peg$c79 = peg$literalExpectation("bytes", false),
      peg$c80 = function() { return Type.Bytes; },
      peg$c81 = "[",
      peg$c82 = peg$literalExpectation("[", false),
      peg$c83 = "]",
      peg$c84 = peg$literalExpectation("]", false),
      peg$c85 = function(t) { return expression(Token.RepeatedType, t)},
      peg$c86 = "map<",
      peg$c87 = peg$literalExpectation("map<", false),
      peg$c88 = ",",
      peg$c89 = peg$literalExpectation(",", false),
      peg$c90 = ">",
      peg$c91 = peg$literalExpectation(">", false),
      peg$c92 = function(k, v) {
          return expression(Token.MapType, k, v);
        },
      peg$c93 = ".",
      peg$c94 = peg$literalExpectation(".", false),
      peg$c95 = function(p, t) {
          return expression(Token.ImportType, p, t);
      	},
      peg$c96 = "@",
      peg$c97 = peg$literalExpectation("@", false),
      peg$c98 = "(",
      peg$c99 = peg$literalExpectation("(", false),
      peg$c100 = ")",
      peg$c101 = peg$literalExpectation(")", false),
      peg$c102 = function(a, o) {
          return expression(Token.Annotation, a, o);
        },
      peg$c103 = function(a) { return expression(Token.Annotation, a, true); },
      peg$c104 = "service",
      peg$c105 = peg$literalExpectation("service", false),
      peg$c106 = function(name, m) {
              return {name: name, methods:m}
          },
      peg$c107 = function(name, m, r) { return r; },
      peg$c108 = function(name, m, r) {
              return {name:name, args:m, returns: r};
          },
      peg$c109 = function(i) { return i; },
      peg$c110 = function(head, m) { return m; },
      peg$c111 = function(head, tail) {
                var result = {};

                [head].concat(tail).forEach(function(element) {
                  result[element.name] = element.value;
                });

                return result; //expression(NodeType.TypedObjectType, result);
              },
      peg$c112 = function(members) { return members},
      peg$c113 = function(name, value) {
              return {name:name, value:value};
          },
      peg$c114 = function(i) { return i },
      peg$c115 = function(m) {
              return m;
          },
      peg$c116 = /^[a-zA-Z]/,
      peg$c117 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false),
      peg$c118 = /^[a-zA-Z0-9_]/,
      peg$c119 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c120 = function(a) { return lodash.flatten(a).join(''); },
      peg$c121 = /^[a-zA-Z0-9_.\/]/,
      peg$c122 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", ".", "/"], false, false),
      peg$c123 = "'",
      peg$c124 = peg$literalExpectation("'", false),
      peg$c125 = "\"",
      peg$c126 = peg$literalExpectation("\"", false),
      peg$c127 = ";",
      peg$c128 = peg$literalExpectation(";", false),
      peg$c129 = /^[0-9]/,
      peg$c130 = peg$classExpectation([["0", "9"]], false, false),
      peg$c131 = peg$otherExpectation("whitespace"),
      peg$c132 = /^[ \t\n\r]/,
      peg$c133 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
      peg$c134 = peg$anyExpectation(),
      peg$c135 = /^[ \xA0\u1680\u2000-\u200A\u202F\u205F\u3000]/,
      peg$c136 = peg$classExpectation([" ", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u202F", "\u205F", "\u3000"], false, false),
      peg$c137 = "\t",
      peg$c138 = peg$literalExpectation("\t", false),
      peg$c139 = "\x0B",
      peg$c140 = peg$literalExpectation("\x0B", false),
      peg$c141 = "\f",
      peg$c142 = peg$literalExpectation("\f", false),
      peg$c143 = " ",
      peg$c144 = peg$literalExpectation(" ", false),
      peg$c145 = "\xA0",
      peg$c146 = peg$literalExpectation("\xA0", false),
      peg$c147 = "\uFEFF",
      peg$c148 = peg$literalExpectation("\uFEFF", false),
      peg$c149 = /^[\n\r\u2028\u2029]/,
      peg$c150 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c151 = peg$otherExpectation("end of line"),
      peg$c152 = "\n",
      peg$c153 = peg$literalExpectation("\n", false),
      peg$c154 = "\r\n",
      peg$c155 = peg$literalExpectation("\r\n", false),
      peg$c156 = "\r",
      peg$c157 = peg$literalExpectation("\r", false),
      peg$c158 = "\u2028",
      peg$c159 = peg$literalExpectation("\u2028", false),
      peg$c160 = "\u2029",
      peg$c161 = peg$literalExpectation("\u2029", false),
      peg$c162 = peg$otherExpectation("comment"),
      peg$c163 = "/*",
      peg$c164 = peg$literalExpectation("/*", false),
      peg$c165 = "*/",
      peg$c166 = peg$literalExpectation("*/", false),
      peg$c167 = "//",
      peg$c168 = peg$literalExpectation("//", false),
      peg$c169 = function(value) { return value; },
      peg$c170 = function(a, value) { return value;},
      peg$c171 = function(a, rest) { return [a].concat(rest); },
      peg$c172 = "false",
      peg$c173 = peg$literalExpectation("false", false),
      peg$c174 = function() { return false; },
      peg$c175 = "null",
      peg$c176 = peg$literalExpectation("null", false),
      peg$c177 = function() { return null;  },
      peg$c178 = "true",
      peg$c179 = peg$literalExpectation("true", false),
      peg$c180 = function() { return true;  },
      peg$c181 = function(head, tail) {
              var result = {};

              [head].concat(tail).forEach(function(element) {
                result[element.name] = element.value;
              });

              return result;
            },
      peg$c182 = function(members) { return members !== null ? members: {}; },
      peg$c183 = function(name, value) {
            return { name: name, value: value };
          },
      peg$c184 = function(head, v) { return v; },
      peg$c185 = function(head, tail) { return [head].concat(tail); },
      peg$c186 = function(values) { return values !== null ? values : []; },
      peg$c187 = peg$otherExpectation("number"),
      peg$c188 = function() { return parseFloat(text()); },
      peg$c189 = /^[1-9]/,
      peg$c190 = peg$classExpectation([["1", "9"]], false, false),
      peg$c191 = /^[eE]/,
      peg$c192 = peg$classExpectation(["e", "E"], false, false),
      peg$c193 = "-",
      peg$c194 = peg$literalExpectation("-", false),
      peg$c195 = "+",
      peg$c196 = peg$literalExpectation("+", false),
      peg$c197 = "0",
      peg$c198 = peg$literalExpectation("0", false),
      peg$c199 = peg$otherExpectation("string"),
      peg$c200 = function(chars) { return chars.join(""); },
      peg$c201 = "\\",
      peg$c202 = peg$literalExpectation("\\", false),
      peg$c203 = "/",
      peg$c204 = peg$literalExpectation("/", false),
      peg$c205 = "b",
      peg$c206 = peg$literalExpectation("b", false),
      peg$c207 = function() { return "\b"; },
      peg$c208 = "f",
      peg$c209 = peg$literalExpectation("f", false),
      peg$c210 = function() { return "\f"; },
      peg$c211 = "n",
      peg$c212 = peg$literalExpectation("n", false),
      peg$c213 = function() { return "\n"; },
      peg$c214 = "r",
      peg$c215 = peg$literalExpectation("r", false),
      peg$c216 = function() { return "\r"; },
      peg$c217 = "t",
      peg$c218 = peg$literalExpectation("t", false),
      peg$c219 = function() { return "\t"; },
      peg$c220 = "u",
      peg$c221 = peg$literalExpectation("u", false),
      peg$c222 = function(digits) {
                return String.fromCharCode(parseInt(digits, 16));
              },
      peg$c223 = function(sequence) { return sequence; },
      peg$c224 = /^[^\0-\x1F"\\]/,
      peg$c225 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false),
      peg$c226 = /^[0-9a-f]/i,
      peg$c227 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseProgram();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseProgram() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsePackage();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse__();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseElements();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s2, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseElements() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseElement();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parsews();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseElement();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s3;
          s4 = peg$c2(s1, s5);
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parsews();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseElement();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c2(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseElement() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseRecord();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c4(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseImport();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5(s1);
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parsePackage() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 7) === peg$c6) {
        s2 = peg$c6;
        peg$currPos += 7;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parsealpha();
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parsealpha();
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parse__();
            if (s5 !== peg$FAILED) {
              s6 = peg$parsesemi();
              if (s6 !== peg$FAILED) {
                s7 = peg$parse__();
                if (s7 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c8(s4);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseImport() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parse__();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 6) === peg$c9) {
        s2 = peg$c9;
        peg$currPos += 6;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parse_();
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsequote();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parseimport_statement();
            if (s6 !== peg$FAILED) {
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parseimport_statement();
              }
            } else {
              s5 = peg$FAILED;
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parsequote();
              if (s6 !== peg$FAILED) {
                s7 = peg$parse__();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsesemi();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parse__();
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c11(s5);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBody() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseRecords();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c12(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseRecords() {
    var s0, s1, s2, s3, s4, s5, s6;
